--- a/DBCourseWork/EntityViewController.xib
+++ b/DBCourseWork/EntityViewController.xib
@@ -29,6 +29,10 @@
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="-2" id="nLW-3J-8w6"/>
+                                    <outlet property="delegate" destination="-2" id="Zcl-UJ-pei"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
